# PublicProviderConf

./: .eslintrc.json  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  MIGRATION_SUMMARY.md  README-TS.md  README.md  TYPESCRIPT_MIGRATION.md  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  test-basic.ts  test-build.sh  test-cli.ts  tsconfig.json  vite.cli.config.ts  vite.config.ts  vitest.config.ts
.claude/: data_converter.md  format_validator.md  provider_implementer.md
.claude/agents/: README.md  (+7 more)
config/: providers.toml  providers.toml.example
dist_rust_backup/: all.json  deepseek.json  gemini.json  groq.json  siliconflow.json  tokenflux.json
docs/: architecture-overview.md  auto-update.md  custom-provider.md  feat_dc_sync_version.md
manual-templates/: aihubmix.json  alibaba-cn.json  alibaba.json  burncloud.json  cherryin.json  custom-provider-overrides.json  deepseek.json  doubao.json  google.json  kimi-for-coding.json  minimax-cn-coding-plan.json  minimax-cn.json  minimax-coding-plan.json  minimax.json  models-dev-snapshot.json  moonshot-ai.json  moonshot.json  ollama.json  openai.json  openrouter.json  ppinfra.json  ppio.json  siliconflow.json  tokenflux.json  xai.json  zenmux.json
samples/: openrouter.json
scripts/: auto-update.mjs  sync-volcengine.mjs  with-env.sh
src/: cli.ts  index.ts  lib.rs  main.rs  test-core.ts  test.ts
templates/: anthropic.json  ollama.json  openai.json  siliconflow.json
tests/: config.spec.ts  data-aggregator.spec.ts  data-normalizer.spec.ts  json-validator.spec.ts  json-writer.spec.ts  models-dev.spec.ts
(+114 files in other folders)
