[package]
name = "public-provider-conf"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"

[dev-dependencies]
tokio-test = "0.4"
